dodanie archiwum w news

--- a/src/html/news-archiv.html
+++ b/src/html/news-archiv.html
@@ -70,30 +70,144 @@
 		</div>
 	</div> -->
 
-<div class="news container">	
+	<div class="news container">	
+		<div class="row">
 
-	<div class="singleNews container">
-		
-		<div class="newsContent">
-			
-			<div class="descriptionPRzText">
-				
-				IV edycja Agro Targów Wschód odbędzie się w dniach 20-21 czerwca 2020 roku.  Targi organizowane będą we współpracy z partnerem organizacyjnym Szefem Doradców Rolnych Ukrainy, organizacjami rolniczymi na Ukrainie oraz Ministerstwem Polityki Agrarnej i Żywności Ukrainy. Współpracujemy również z Wojewódzkimi Ośrodkami Doradztwa Rolniczego z województw: lubelskiego, podlaskiego, podkarpackiego, świętokrzyskiego i małopolskiego .Wydarzenie będzie mocno reklamowane w TVP 1 w programie AGRO BIZNES oraz w innych mediach i prasie branżowej. Jeszcze bardziej intensywna reklama pojawi się  w mediach centralnych na Ukrainie.</br></br>
-			</div>	
-		</div>
+			<!-- <div class="col-xs-12 col-md-4 single-news">				
+							<img src="../../src/assets/img/news16/logomin.png" alt="" class="header">
+							<div>
+							<p class="date"></p>
+							<h3 class="title">Targi Kielce na Targach</br></br></h3>
+							<p class="description">Cieszymy się z mocnego wsparcia centrali Krajowego Ośrodka Wsparcia Rolnictwa oraz centrali Agencji Restrukturyzacji i Modernizacji Rolnictwa, którzy wystawią się na Agro Targach Wschód.</p>
+							<a href="../../src/html/single-news20.html">Czytaj dalej</a>
+							</div>
+						</div>
+						 -->			
+			<div class="col-xs-12 col-md-4 single-news">				
+				<!-- <img src="../../src/assets/img/news16/logomin.png" alt="" class="header"> -->
+				<div>
+				<p class="date"></p>
+				<h3 class="title">Państwowe Instytuty Badawcze na Targach</br></h3>
+				<!-- <p class="description">Cieszymy się z mocnego wsparcia centrali Krajowego Ośrodka Wsparcia Rolnictwa oraz centrali Agencji Restrukturyzacji i Modernizacji Rolnictwa, którzy wystawią się na Agro Targach Wschód.</p> -->
+				<a href="../../src/html/single-news17.html">Czytaj dalej</a>
+				</div>
+			</div>
+
+			<!-- <div class="col-xs-12 col-md-4 single-news">				
+				<img src="../../src/assets/img/news16/logomin.png" alt="" class="header">
+				<div>
+				<p class="date"></p>
+				<h3 class="title">Wspierają nas rządowe agencje</h3>
+				<p class="description">Cieszymy się z mocnego wsparcia centrali Krajowego Ośrodka Wsparcia Rolnictwa oraz centrali Agencji Restrukturyzacji i Modernizacji Rolnictwa, którzy wystawią się na Agro Targach Wschód.</p>
+				<a href="../../src/html/single-news16.html">Czytaj dalej</a>
+				</div>
+			</div> -->
+
+			<div class="col-xs-12 col-md-4 single-news">				
+				<!-- <img src="../../src/assets/img/news15/logomin.png" alt="" class="header"> -->
+				<div>
+				<p class="date"></p>
+				<h3 class="title">Marszałek Zaprasza</br></br></h3>
+				<!-- <p class="description">Partnerskie kontakty – Ukraina</p> -->
+				<a href="../../src/html/single-news18.html">Czytaj dalej</a>
+				</div>
+			</div>
+
+			<div class="col-xs-12 col-md-4 single-news">				
+				<!-- <img src="../../src/assets/img/news15/logomin.png" alt="" class="header"> -->
+				<div>
+				<p class="date"></p>
+				<h3 class="title">Współpraca z Politechniką Rzeszowską</h3>
+				<!-- <p class="description">Partnerskie kontakty – Ukraina</p> -->
+				<a href="../../src/html/single-news19.html">Czytaj dalej</a>
+				</div>
+			</div>
 	</div>
 
+
+
+		<div class="row">
 			
-		<div class="container">
-          <div class="row"> 
-            <div class="col-md-12">
-              <div class="wsteczbox">
-              <a class="wstecz" href="../../src/html/news-archiv.html">Archiwum</a>
-              </div>
-            </div>
-          </div>
-        </div>  
+			
+
+			<div class="col-xs-12 col-md-4 single-news">				
+				<!-- <img src="../../src/assets/img/news15/logomin.png" alt="" class="header"> -->
+				<div>
+				<p class="date"></p>
+				<h3 class="title">Kontakty – Ukraina</br></br></h3>
+				<!-- <p class="description">Partnerskie kontakty – Ukraina</p> -->
+				<a href="../../src/html/single-news15.html">Czytaj dalej</a>
+				</div>
+			</div>
+			
+
+			<div class="col-xs-12 col-md-4 single-news">				
+				<!-- <img src="../../src/assets/img/partner0L.jpg" alt="" class="header"> -->
+				<div>
+				<p class="date"></p>
+				<h3 class="title">Podziękowania</br></br></h3>
+				<!-- <p class="description">Nasze zaangażowanie oraz pomysł organizacji targów rolnych przy granicy z Ukrainą doceniają najważniejsze osoby w państwie.</p> -->
+				<a href="../../src/html/single-news13.html">Czytaj dalej</a>
+				</div>
+			</div>
+			
+			<div class="col-xs-12 col-md-4 single-news">				
+<!-- 				<img src="../../src/assets/img/wyjazd.jpg" alt="" class="header">
+			--><div>
+					<p class="date">25 maja 2018</p>
+					<h3 class="title">Pokazy Agro Targi Wschód</h3>
+					<!-- <p class="description">Organizator Agro Targów Wschód przeprowadził pokazy próbne w dniu 25.05.2018 r.</p> -->
+					<a href="../../src/html/single-news10.html">Czytaj dalej</a>
+				</div>
+			</div>			
+
+		</div>
 		
+		<div class="row">
+
+			
+			<!-- <div class="col-xs-12 col-md-4 single-news">				
+			<img src="../../src/assets/img/media/tvp3.png" alt="" class="header">				<div>
+				<p class="date">25 maja 2018</p>
+				<h3 class="title">Relacja TVP</br></br></h3>
+				<p class="description">Ponad stu wystawców z Polski i Ukrainy zapowiedziało swój udział w Agro Targach Wschód</p>
+				<a href="../../src/html/single-news9.html">Czytaj dalej</a>
+				</div>
+			</div> -->
+			
+			
+			
+			<div class="col-xs-12 col-md-4 single-news">				
+<!-- 				<img src="../../src/assets/img/news7S.jpg" alt="" class="header"> -->
+				<div>
+					<p class="date">2 maja 2018</p>
+					<h3 class="title">Aukcja maszyn używanych</br> </h3>
+					<!-- <p class="description">Komis aukcja maszyn rolniczych-budowlanych, ciągników.</p> -->
+					<a href="../../src/html/single-news7.html">Czytaj dalej</a>
+				</div>
+			</div>
+
+			<div class="col-xs-12 col-md-4 single-news">				
+<!-- 				<img src="../../src/assets/img/news6.jpg" alt="" class="header">
+				 -->				<div>
+					<p class="date">24 kwietnia 2018</p>
+					<h3 class="title">Wystawa maszyn zabytkowych</h3>
+					<!-- <p class="description">Zapraszamy właścicieli traktorów, maszyn, pojazdów i urządzeń zabytkowych</p> -->
+					<a href="../../src/html/single-news6.html">Czytaj dalej</a>
+				</div>
+			</div>
+
+
+
+		</div>
+
+	</div>
+
+<div class="singleNews container">
+
+		<div class="newsNav">
+			<a class="prev" href="../../src/html/news.html">Wstecz</a>
+		</div>
 </div>
 	
 	<footer>
