dodanie nowego tekstu do aktualnosci

--- a/src/html/news.html
+++ b/src/html/news.html
@@ -77,8 +77,14 @@
 		<div class="newsContent">
 			
 			<div class="descriptionPRzText">
+
+				<p class="descriptionIVATW">	
+				 IV edycja Agro Targów Wschód odbędzie się w dniach 20-21 czerwca 2020 roku.
+				</p>
 				
-				IV edycja Agro Targów Wschód odbędzie się w dniach 20-21 czerwca 2020 roku.  Targi organizowane będą we współpracy z partnerem organizacyjnym Szefem Doradców Rolnych Ukrainy, organizacjami rolniczymi na Ukrainie oraz Ministerstwem Polityki Agrarnej i Żywności Ukrainy. Współpracujemy również z Wojewódzkimi Ośrodkami Doradztwa Rolniczego z województw: lubelskiego, podlaskiego, podkarpackiego, świętokrzyskiego i małopolskiego .Wydarzenie będzie mocno reklamowane w TVP 1 w programie AGRO BIZNES oraz w innych mediach i prasie branżowej. Jeszcze bardziej intensywna reklama pojawi się  w mediach centralnych na Ukrainie.</br></br>
+				Targi organizowane będą we współpracy z partnerem organizacyjnym Szefem Doradców Rolnych Ukrainy, organizacjami rolniczymi na Ukrainie a także Ministerstwem Polityki Agrarnej i Żywności Ukrainy. Współpracujemy również z Wojewódzkimi Ośrodkami Doradztwa Rolniczego z województw: lubelskiego, podlaskiego, podkarpackiego, świętokrzyskiego i małopolskiego .Wydarzenie będzie mocno reklamowane w TVP 1 w programie AGRO BIZNES, w innych mediach i prasie branżowej. Jeszcze bardziej intensywna reklama pojawi się  w mediach centralnych na Ukrainie.
+
+W związku z dynamicznym rozwojem Agro Targów Wschód już dziś możemy zapewnić, że zbliżająca się edycja będzie przygotowana z jeszcze większym rozmachem.</br></br>
 			</div>	
 		</div>
 	</div>
