--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -46,8 +46,8 @@
         <div class="jumbotron">
             <div class="container">
                 <ul class="breadcrumbs">
-                    <li><a href="../../index.html">start</a></li>
-                    <li class="active"><a href="">Kontakt</a></li>
+                   <!--  <li><a href="../../index.html">start</a></li>
+                   <li class="active"><a href="">Kontakt</a></li> -->
                 </ul>
                
             </div>			
