--- a/src/html/news.html
+++ b/src/html/news.html
@@ -47,8 +47,8 @@
 	<div class="jumbotron">
 		<div class="container">
 			<ul class="breadcrumbs">
-				<li><a href="../../index.html">start</a></li>
-				<li class="active"><a href="">aktualności</a></li>
+				<!-- <li><a href="../../index.html">start</a></li>
+				<li class="active"><a href="">aktualności</a></li> -->
 			</ul>
 			
 		</div>			
