--- a/src/html/news.html
+++ b/src/html/news.html
@@ -82,7 +82,7 @@
 				 IV edycja Agro Targów Wschód odbędzie się w dniach 20-21 czerwca 2020 roku.
 				</p>
 				
-				Targi organizowane będą we współpracy z partnerem organizacyjnym Szefem Doradców Rolnych Ukrainy, organizacjami rolniczymi na Ukrainie a także Ministerstwem Polityki Agrarnej i Żywności Ukrainy. Współpracujemy również z Wojewódzkimi Ośrodkami Doradztwa Rolniczego z województw: lubelskiego, podlaskiego, podkarpackiego, świętokrzyskiego i małopolskiego .Wydarzenie będzie mocno reklamowane w TVP 1 w programie AGRO BIZNES, w innych mediach i prasie branżowej. Jeszcze bardziej intensywna reklama pojawi się  w mediach centralnych na Ukrainie.
+				Targi organizowane są z partnerem ukraińskim, Szefem Doradców Rolnych Ukrainy. Współpracujemy również z Wojewódzkimi Ośrodkami Doradztwa Rolniczego z województw: lubelskiego, podlaskiego, podkarpackiego, świętokrzyskiego i małopolskiego .Wydarzenie będzie mocno reklamowane w TVP 1 w programie AGRO BIZNES, w innych mediach i prasie branżowej. Jeszcze bardziej intensywna reklama pojawi się  w mediach centralnych na Ukrainie.
 
 W związku z dynamicznym rozwojem Agro Targów Wschód już dziś możemy zapewnić, że zbliżająca się edycja będzie przygotowana z jeszcze większym rozmachem.</br></br>
 			</div>	
