pogrubienie czcionki przy dacie

--- a/src/html/for-exhibitors-application.html
+++ b/src/html/for-exhibitors-application.html
@@ -134,10 +134,10 @@
                     <p>Wystawca może wziąć udział w Targach, jeżeli spełni następujące warunki łącznie:</p>
                     <ul>
                         <li>
-                            dostarczy Organizatorowi drogą elektroniczną lub pocztową, pisemny, prawidłowo wypełniony i podpisany przez osoby upoważnione Formularz zgłoszeniowy Agro Targów Wschód najpóźniej do dnia 31 maja 2020 roku oraz,
+                            dostarczy Organizatorowi drogą elektroniczną lub pocztową, pisemny, prawidłowo wypełniony i podpisany przez osoby upoważnione Formularz zgłoszeniowy Agro Targów Wschód najpóźniej do dnia <strong> 31 maja 2020 roku</strong> oraz,
                         </li>
                         <li>
-                            wpłaci pełną, łączną opłatę za udział w Targach, wynikającą z Formularz zgłoszeniowy Agro Targów Wschód w nieprzekraczalnym terminie do 12.06.2020 roku.
+                            wpłaci pełną, łączną opłatę za udział w Targach, wynikającą z Formularz zgłoszeniowy Agro Targów Wschód w nieprzekraczalnym terminie do <strong>12.06.2020</strong> roku.
                         </li>
                         <li>
                             Zaakceptuje w pełni obowiązujący go regulamin
