poprawka w wydarzeniach słowna

--- a/src/html/wydarzenia.html
+++ b/src/html/wydarzenia.html
@@ -51,8 +51,8 @@
 	<div class="jumbotron">
 		<div class="container">
 			<ul class="breadcrumbs">
-				<li><a href="../../index.html">start</a></li>
-				<li class="active"><a href="">Wydarzenia towarzyszące</a></li>
+				<!-- <li><a href="../../index.html">start</a></li>
+				<li class="active"><a href="">Wydarzenia towarzyszące</a></li> -->
 			</ul>
 			
 		</div>			
@@ -67,7 +67,7 @@
 	<div class="row">
 	    <div class="col-md-12">
 	        <div class="sponsors-list">
-	          	 <h3>Wydarzenia Towarzyszące IV Międzynarodowych Agro Targów Wschód 20 – 21 Czerwca 2020 będą publikowane niebawem</h3>
+	          	 <h3>Wydarzenia Towarzyszące IV Międzynarodowych Agro Targów Wschód 20 – 21 Czerwca 2020 będą publikowane w późniejszym czasie</h3>
       
 
          
