zminay w tekscie gastronomi

--- a/src/html/for-exhibitors-application.html
+++ b/src/html/for-exhibitors-application.html
@@ -164,7 +164,7 @@
                 <div class="col-xs-12 no-padding">
                     <div class="text-box">
                         <h3>Gastronomia:</h3>
-                        <p>Przedstawicieli firm gastronomicznych (produkty do spożycia bezpośredniego na targach/ sprzedaż piwa) prosimy o bezpośredni kontakt z organizatorem Agro Targów Wschód pod adresem e-mailowym: biuro@agrotargiwschod.pl lub nr telefonu 606 418 785 lub 604 750 443
+                        <p>Przedstawicieli firm gastronomicznych (catering/ sprzedaż piwa) prosimy o bezpośredni kontakt z organizatorem Agro Targów Wschód pod adresem e-mailowym: biuro@agrotargiwschod.pl lub nr telefonu 606 418 785 lub 604 750 443
  </p>
                     </div>
                 </div>
