--- a/src/html/aukcja.html
+++ b/src/html/aukcja.html
@@ -57,14 +57,44 @@
 			
 		</div>	-->		
 	</div>
+
+	<div class="container">
+            <div class="row">
+                <div class="col-xs-12 no-padding">
+                    <div class="text-box">
+                    <!-- <h3>Formularz i regulamin:</h3><br>  --><ul>
+                        
+                        <li class="dllink">
+                            <a target="_blank" href="../assets/pdf/20190911/FORMULARZ-ZGLOSZENIOWY-2020.pdf"><h3>Formularz zgłoszeniowy IV Agro Targi Wschód
+                            <img src="../assets/img/pdficon.png"></h3>
+                            </a>
+                        </li>
+                        <li class="dllink">
+                                <a target="_blank" href="../assets/pdf/20190911/Formularz-zgloszeniowy-dla-Podmiotu-Aukcyjnego.pdf"><h3>Formularz zgłoszeniowy dla Podmiotu Aukcyjnego
+                                <img src="../assets/img/pdficon.png"></h3>
+                                </a>
+                        </li>
+                        <li class="dllink">
+                                <a target="_blank" href="../assets/pdf/20190916/REGULAMIN-POKAZOW-MASZYN.pdf"><h3>Regulamin pokazów maszyn
+                                <img src="../assets/img/pdficon.png"></h3>
+                                </a>
+                        </li>
+                        
+
+
+                    </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 	<div class="singleNews container">
 		<div class="newsHeader">
 			<!-- <img src="../../src/assets/img/news7.jpg" alt=""> -->
 		</div>	
-		<div class="newsContent">
+		<!-- <div class="newsContent">
 			<h3  align="center" >Informacje dotyczące aukcji maszyn będą publikowane niebawem</h3>
 			
-		</div>
+		</div> -->
 		
 		<div class="container">
           <div class="row"> 
