usunięcie zakładek na zdjeciu

--- a/src/html/single-news19.html
+++ b/src/html/single-news19.html
@@ -50,9 +50,9 @@
 	<div class="jumbotron">
 		<div class="container">
 			<ul class="breadcrumbs">
-				<li><a href="../../index.html">start</a></li>				
+				<!-- <li><a href="../../index.html">start</a></li>				
 				<li><a href="../../src/html/news.html">aktualności</a></li>
-				<li class="active"><a href="">Współpraca z Politechniką Rzeszowską</a></li>
+				<li class="active"><a href="">Współpraca z Politechniką Rzeszowską</a></li -->>
 			</ul>
 			
 		</div>			
