--- a/src/html/zaproszenie.html
+++ b/src/html/zaproszenie.html
@@ -51,9 +51,9 @@
         <div class="jumbotron">
             <div class="container">
                 <ul class="breadcrumbs">
-                    <li><a href="../../index.html">start</a></li>				
+                    <!-- <li><a href="../../index.html">start</a></li>                
                     <li><a href="../../src/html/for-exhibitors.html">dla wystawców</a></li>
-                    <li class="active"><a href="">Zapraszamy  na IV Agro Targi Wschód 2020</a></li>
+                    <li class="active"><a href="">Zapraszamy  na IV Agro Targi Wschód 2020</a></li> -->
                 </ul>
                   
             </div>			
