--- a/src/html/for-exhibitors.html
+++ b/src/html/for-exhibitors.html
@@ -47,8 +47,8 @@
         <div class="jumbotron">
             <div class="container">
                 <ul class="breadcrumbs">
-                    <li><a href="../../index.html">start</a></li>				
-                    <li class="active"><a href="">dla wystawców</a></li>
+                    <!-- <li><a href="../../index.html">start</a></li>                
+                    <li class="active"><a href="">dla wystawców</a></li> -->
                 </ul>
                
             </div>			
