--- a/src/html/program2019.html
+++ b/src/html/program2019.html
@@ -47,9 +47,9 @@
         <div class="jumbotron">
             <div class="container">
                 <ul class="breadcrumbs">
-                    <li><a href="../../index.html">start</a></li>				
+                    <!-- <li><a href="../../index.html">start</a></li>        
                     <li><a href="../../src/html/for-exhibitors.html">dla zwiedzających</a></li>
-                    <li class="active"><a href="">Plan-Program targów</a></li>
+                    <li class="active"><a href="">Plan-Program targów</a></li> -->
                 </ul>
           
             </div>			
