--- a/src/html/single-news6.html
+++ b/src/html/single-news6.html
@@ -50,9 +50,9 @@
 	<div class="jumbotron">
 		<div class="container">
 			<ul class="breadcrumbs">
-				<li><a href="../../index.html">start</a></li>				
+				<!-- <li><a href="../../index.html">start</a></li>				
 				<li><a href="../../src/html/news.html">aktualności</a></li>
-				<li class="active"><a href="">Wystawa maszyn zabytkowych</a></li>
+				<li class="active"><a href="">Wystawa maszyn zabytkowych</a></li> -->
 			</ul>
 			
 		</div>			
