--- a/src/html/wydarzenia2019.html
+++ b/src/html/wydarzenia2019.html
@@ -51,8 +51,8 @@
 	<div class="jumbotron">
 		<div class="container">
 			<ul class="breadcrumbs">
-				<li><a href="../../index.html">start</a></li>
-				<li class="active"><a href="">Wydarzenia towarzyszące</a></li>
+				<!-- <li><a href="../../index.html">start</a></li>
+				<li class="active"><a href="">Wydarzenia towarzyszące</a></li> -->
 			</ul>
 			
 		</div>			
