--- a/src/html/wydarzenia.html
+++ b/src/html/wydarzenia.html
@@ -48,7 +48,7 @@
 			</ul>
 		</nav>
 	</header>
-	<div class="jumbotron">
+	<div class="jumbotronWydTow">
 		<div class="container">
 			<ul class="breadcrumbs">
 				<!-- <li><a href="../../index.html">start</a></li>
