--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -43,7 +43,7 @@
             </ul>
         </nav>
         </header>
-        <div class="jumbotron">
+        <div class="jumbotronKontakt">
             <div class="container">
                 <ul class="breadcrumbs">
                    <!--  <li><a href="../../index.html">start</a></li>
