--- a/src/html/for-exhibitors-regulations.html
+++ b/src/html/for-exhibitors-regulations.html
@@ -124,7 +124,9 @@
     </div> 
         <div class="container">
             <div class="row">
+                <h3 style="text-align: center;">REGULAMIN AGRO TARGÓW WSCHÓD:</h3><br>
                 <div class="col-xs-12 no-padding">
+
                     
                         <ul>
                         <li class="dllink">
