--- a/src/html/news-konferencja-w-kijowie.html
+++ b/src/html/news-konferencja-w-kijowie.html
@@ -132,7 +132,7 @@
 		<div class="newsContent">
 			<p class="date"></p>
 			<h3 class="title"></h3>
-			<p class="descriptionPRzText">W dniach 24-25 września organizator Agro Targów Wschód Stanisław Sawa przebywał w Kijowie na zaproszenie Szefa Doradców Rolnych Ukrainy Ivana Pankiva. Tematem konferencji były polskie  doświadczenia w funkcjonowaniu rynku gruntów rolnych. W spotkaniu udział wzięli przedstawiciele władz państwowych Ukrainy, deputowani do Rady Najwyższej Ukrainy, przedstawiciele Izb Rolniczych, doradcy rolni  i farmerzy z Ukrainy. Organizatorem wydarze</p>
+			<p class="descriptionPRzText">W dniach 24-25 września organizator Agro Targów Wschód Stanisław Sawa przebywał w Kijowie na zaproszenie Szefa Doradców Rolnych Ukrainy Ivana Pankiva. Tematem konferencji były polskie  doświadczenia w funkcjonowaniu rynku gruntów rolnych. W spotkaniu udział wzięli przedstawiciele władz państwowych Ukrainy, deputowani do Rady Najwyższej Ukrainy, przedstawiciele Izb Rolniczych, doradcy rolni  i farmerzy z Ukrainy. Organizatorem wydarzenia było Ministerstwo Gospodarki, Handlu i Rolnictwa Ukrainy,  Krajowe Stowarzyszenie Doradztwa Rolniczego Ukrainy, Stowarzyszenie Rolników i Prywatnych Właścicieli Ziemskich Ukrainy, Stanisław Sawa Agro Targi Wschód Polska.</p>
 		</div> 
 
 		<div class="container gallery">
