--- a/src/html/for-exhibitors-application.html
+++ b/src/html/for-exhibitors-application.html
@@ -188,7 +188,7 @@
                             </a>
                         </li>
                         <li class="dllink">
-                            <a target="_blank" href="../assets/pdf/20190911/FORMULARZ-ZGLOSZENIOWY-DLA-HANDLU-2020.pdf">Umowa dla sektora handlowego
+                            <a target="_blank" href="../assets/pdf/20190911/FORMULARZ-ZGLOSZENIOWY-DLA-HANDLU-2020.pdf">Umowa dla gastronomii, handlu
                             <img src="../assets/img/pdficon.png">
                             </a>
                         </li>
