poprawka w texcie zgloszenie i zmiana kolejności

--- a/src/html/for-exhibitors-application.html
+++ b/src/html/for-exhibitors-application.html
@@ -175,7 +175,7 @@
                 <div class="col-xs-12 no-padding">
                     <div class="text-box">
                     <!-- <h3>Formularz dla handlu:</h3><br> -->
-                    <p>Uczestników Targów prowadzących działalność gastronomiczną, handlową i inną nie wystawienniczą prosimy o wypełnienie i przesłanie niniejszej umowy</p><br>
+                    <p>Uczestników Targów prowadzących działalność gastronomiczną, handlową i inną nie wystawienniczą prosimy o wypełnienie i przesłanie niniejszej umowy:</p><br>
                     <ul>
                         <!-- <li class="dllink">
                             <a target="_blank" href="../assets/pdf/20190105/Cennik-dla-handlu-drobnego-ATW-2019.pdf">Cennik dla handlu drobnego
@@ -183,15 +183,16 @@
                             </a>
                         </li> -->
                         <li class="dllink">
-                            <a target="_blank" href="../assets/pdf/20190911/FORMULARZ-ZGLOSZENIOWY-DLA-REKODZIELA-2020.pdf">Umowa dla rękodzieła
-                            <img src="../assets/img/pdficon.png">
-                            </a>
-                        </li>
-                        <li class="dllink">
                             <a target="_blank" href="../assets/pdf/20190911/FORMULARZ-ZGLOSZENIOWY-DLA-HANDLU-2020.pdf">Umowa dla gastronomii, handlu
                             <img src="../assets/img/pdficon.png">
                             </a>
                         </li>
+                        <li class="dllink">
+                            <a target="_blank" href="../assets/pdf/20190911/FORMULARZ-ZGLOSZENIOWY-DLA-REKODZIELA-2020.pdf">Umowa dla rękodzieła
+                            <img src="../assets/img/pdficon.png">
+                            </a>
+                        </li>
+                        
                     </ul>
                     </div>
                 </div>
