poprawka w tekst na głownej

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 					<div class="col-xs-12 col-md-4 sponsorship">
 						<img src="src/assets/img/partnerzy/kowr115.png" alt="KRAJOWY OŚRODEK WSPARCIA ROLNICTWA">
-						<h4>PARTNER GŁÓWNY</h4>
+						<h4>PARTNER</h4>
 						<p>KRAJOWY OŚRODEK WSPARCIA ROLNICTWA</p>
 					</div>
 					<div class="col-xs-12 col-md-4 sponsorship">
