--- a/src/html/galleries.html
+++ b/src/html/galleries.html
@@ -132,7 +132,7 @@
 		</div>	
 		<div class="newsContent">
 			<p class="date"></p>
-			<h3 class="title">III edycja targów - 8-9 Czerwca 2019</h3>
+			<h3 class="title"><!-- III edycja targów - 8-9 Czerwca 2019 --></h3>
 			
 		</div> 
 
@@ -220,7 +220,7 @@
 		</div>	
 		<div class="newsContent">
 			<p class="date"></p>
-			<h3 class="title">II edycja targów - 9-10 czerwca 2018</h3>
+			<h3 class="title"><!-- II edycja targów - 9-10 czerwca 2018 --></h3>
 			
 		</div> 
 
