usuniecie tekstu, poprawki w regulaminie i zgloszeniach, umowach

--- a/src/html/for-exhibitors-regulations.html
+++ b/src/html/for-exhibitors-regulations.html
@@ -134,31 +134,31 @@
                                 <img src="../assets/img/pdficon.png"></h3>
                                 </a>
                         </li>
-                        <li class="dllink">
-                                <a target="_blank" href="../assets/pdf/20190916/REGULAMIN-POKAZOW-MASZYN.pdf"><h3>Regulamin pokazów maszyn
-                                <img src="../assets/img/pdficon.png"></h3>
-                                </a>
-                        </li>
-                        <li class="dllink">
-                                <a target="_blank" href="../assets/pdf/20190916/REGULAMIN-DLA-GASTRONOMII-HANDLU-I-OGRODNICTWA.pdf"><h3>Regulamin dla gastronomii, handlu i ogrodnictwa
-                                <img src="../assets/img/pdficon.png"></h3>
-                                </a>
-                        </li>
-                        <li class="dllink">
-                                <a target="_blank" href="../assets/pdf/20190916/ZALACZNIK-NR-1.pdf"><h3>Załącznik nr 1
-                                <img src="../assets/img/pdficon.png"></h3>
-                                </a>
-                        </li>
-                        <li class="dllink">
-                                <a target="_blank" href="../assets/pdf/20190916/ZALACZNIK-NR-2.pdf"><h3>Załącznik nr 2
-                                <img src="../assets/img/pdficon.png"></h3>
-                                </a>
-                        </li>
-                        <li class="dllink">
-                                <a target="_blank" href="../assets/pdf/20190916/ZALACZNIK-NR-3.pdf"><h3>Załącznik nr 3
-                                <img src="../assets/img/pdficon.png"></h3>
-                                </a>
-                        </li>
+                       <!--  <li class="dllink">
+                               <a target="_blank" href="../assets/pdf/20190916/REGULAMIN-POKAZOW-MASZYN.pdf"><h3>Regulamin pokazów maszyn
+                               <img src="../assets/img/pdficon.png"></h3>
+                               </a>
+                       </li>
+                       <li class="dllink">
+                               <a target="_blank" href="../assets/pdf/20190916/REGULAMIN-DLA-GASTRONOMII-HANDLU-I-OGRODNICTWA.pdf"><h3>Regulamin dla gastronomii, handlu i ogrodnictwa
+                               <img src="../assets/img/pdficon.png"></h3>
+                               </a>
+                       </li>
+                       <li class="dllink">
+                               <a target="_blank" href="../assets/pdf/20190916/ZALACZNIK-NR-1.pdf"><h3>Załącznik nr 1
+                               <img src="../assets/img/pdficon.png"></h3>
+                               </a>
+                       </li>
+                       <li class="dllink">
+                               <a target="_blank" href="../assets/pdf/20190916/ZALACZNIK-NR-2.pdf"><h3>Załącznik nr 2
+                               <img src="../assets/img/pdficon.png"></h3>
+                               </a>
+                       </li>
+                       <li class="dllink">
+                               <a target="_blank" href="../assets/pdf/20190916/ZALACZNIK-NR-3.pdf"><h3>Załącznik nr 3
+                               <img src="../assets/img/pdficon.png"></h3>
+                               </a>
+                       </li> -->
                         </ul>
                    
                 </div>
