--- a/src/html/for-exhibitors-regulations.html
+++ b/src/html/for-exhibitors-regulations.html
@@ -130,17 +130,17 @@
                     
                         <ul>
                         <li class="dllink">
-                                <a target="_blank" href="../assets/pdf/20190916/REGULAMIN.pdf"><h3> Regulamin targów
+                                <a target="_blank" href="../assets/pdf/20200116/REGULAMIN.pdf"><h3> Regulamin targów
                                 <img src="../assets/img/pdficon.png"></h3>
                                 </a>
                         </li>
-                       <!--  <li class="dllink">
-                               <a target="_blank" href="../assets/pdf/20190916/REGULAMIN-POKAZOW-MASZYN.pdf"><h3>Regulamin pokazów maszyn
+                       <li class="dllink">
+                               <a target="_blank" href="../assets/pdf/20200116/REGULAMIN-POKAZOW-MASZYN.pdf"><h3>Regulamin pokazów maszyn
                                <img src="../assets/img/pdficon.png"></h3>
                                </a>
                        </li>
                        <li class="dllink">
-                               <a target="_blank" href="../assets/pdf/20190916/REGULAMIN-DLA-GASTRONOMII-HANDLU-I-OGRODNICTWA.pdf"><h3>Regulamin dla gastronomii, handlu i ogrodnictwa
+                               <a target="_blank" href="../assets/pdf/20200116/REGULAMIN-DLA-GASTRONOMII-HANDLU-I-OGRODNICTWA.pdf"><h3>Regulamin dla gastronomii, handlu i ogrodnictwa
                                <img src="../assets/img/pdficon.png"></h3>
                                </a>
                        </li>
@@ -158,7 +158,7 @@
                                <a target="_blank" href="../assets/pdf/20190916/ZALACZNIK-NR-3.pdf"><h3>Załącznik nr 3
                                <img src="../assets/img/pdficon.png"></h3>
                                </a>
-                       </li> -->
+                       </li>
                         </ul>
                    
                 </div>
