poprawka w formularzu dla handlu dorbnego oraz wyrzucenie rekodziela i złączników do regulaminu

--- a/src/html/for-exhibitors-application.html
+++ b/src/html/for-exhibitors-application.html
@@ -183,15 +183,15 @@
                           </a>
                       </li> -->
                        <li class="dllink">
-                           <a target="_blank" href="../assets/pdf/20200116/FORMULARZ-ZGLOSZENIOWY-DLA-HANDLU-2020.pdf">Umowa dla gastronomii, handlu
+                           <a target="_blank" href="../assets/pdf/20200116/UMOWA-DLA-HANDLU-DROBNEGO-2020.pdf">Umowa dla handlu drobnego
                            <img src="../assets/img/pdficon.png">
                            </a>
                        </li>
-                       <li class="dllink">
+                       <!-- <li class="dllink">
                            <a target="_blank" href="../assets/pdf/20190911/FORMULARZ-ZGLOSZENIOWY-DLA-REKODZIELA-2020.pdf">Umowa dla rękodzieła
                            <img src="../assets/img/pdficon.png">
                            </a>
-                       </li>
+                       </li> -->
                        
                    </ul>
                    </div>
