--- a/src/html/for-exhibitors-regulations.html
+++ b/src/html/for-exhibitors-regulations.html
@@ -144,7 +144,7 @@
                                <img src="../assets/img/pdficon.png"></h3>
                                </a>
                        </li>
-                       <li class="dllink">
+                       <!-- <li class="dllink">
                                <a target="_blank" href="../assets/pdf/20190916/ZALACZNIK-NR-1.pdf"><h3>Załącznik nr 1
                                <img src="../assets/img/pdficon.png"></h3>
                                </a>
@@ -158,7 +158,7 @@
                                <a target="_blank" href="../assets/pdf/20190916/ZALACZNIK-NR-3.pdf"><h3>Załącznik nr 3
                                <img src="../assets/img/pdficon.png"></h3>
                                </a>
-                       </li>
+                       </li> -->
                         </ul>
                    
                 </div>
