popawka w regulamin dla handlu drobnego

--- a/src/html/for-exhibitors-regulations.html
+++ b/src/html/for-exhibitors-regulations.html
@@ -140,7 +140,7 @@
                                </a>
                        </li>
                        <li class="dllink">
-                               <a target="_blank" href="../assets/pdf/20200116/REGULAMIN-DLA-GASTRONOMII-HANDLU-I-OGRODNICTWA.pdf"><h3>Regulamin dla gastronomii, handlu i ogrodnictwa
+                               <a target="_blank" href="../assets/pdf/20200116/REGULAMIN-DLA-HANDLU-DROBNEGO.pdf"><h3>Regulamin dla handlu drobnego
                                <img src="../assets/img/pdficon.png"></h3>
                                </a>
                        </li>
